Updated URLs repos for the diazoframework goldilocks css themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -267,7 +267,7 @@ diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
 diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
-diazotheme.goldilocks = git https://github.com/TH-code/diazotheme.goldilocks.git
+diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.git
 #diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
 diazotheme.kube = git https://github.com/TH-code/diazotheme.kube.git
 diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
@@ -282,7 +282,7 @@ diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.
 diazoframework.baseline = git https://github.com/plone-ve/diazoframework.baseline.git
 diazoframework.bootstrap = git https://github.com/plone-ve/diazoframework.bootstrap.git
 diazoframework.foundation = git https://github.com/plone-ve/diazoframework.foundation.git
-diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
+diazoframework.goldilocks = git https://github.com/plone-ve/diazoframework.goldilocks.git
 diazoframework.kube = git https://github.com/TH-code/diazoframework.kube.git
 diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/TH-code/diazoframework.skeleton.git
