Updated URLs repos for the diazoframework kube css themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -269,7 +269,7 @@ diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
 diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.git
 #diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
-diazotheme.kube = git https://github.com/TH-code/diazotheme.kube.git
+diazotheme.kube = git https://github.com/plone-ve/diazotheme.kube.git
 diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
 diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
@@ -283,7 +283,7 @@ diazoframework.baseline = git https://github.com/plone-ve/diazoframework.baselin
 diazoframework.bootstrap = git https://github.com/plone-ve/diazoframework.bootstrap.git
 diazoframework.foundation = git https://github.com/plone-ve/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/plone-ve/diazoframework.goldilocks.git
-diazoframework.kube = git https://github.com/TH-code/diazoframework.kube.git
+diazoframework.kube = git https://github.com/plone-ve/diazoframework.kube.git
 diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/TH-code/diazoframework.skeleton.git
 
