Updated URLs repos for the diazoframework purecss themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -271,7 +271,7 @@ diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.gi
 #diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
 diazotheme.kube = git https://github.com/plone-ve/diazotheme.kube.git
 diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
-diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
+diazotheme.purecss = git https://github.com/plone-ve/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
@@ -284,7 +284,7 @@ diazoframework.bootstrap = git https://github.com/plone-ve/diazoframework.bootst
 diazoframework.foundation = git https://github.com/plone-ve/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/plone-ve/diazoframework.goldilocks.git
 diazoframework.kube = git https://github.com/plone-ve/diazoframework.kube.git
-diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
+diazoframework.purecss = git https://github.com/plone-ve/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/TH-code/diazoframework.skeleton.git
 
 
