Updated URL repo for the diazo skeleton css theme

--- a/themes.cfg
+++ b/themes.cfg
@@ -272,7 +272,7 @@ diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.gi
 diazotheme.kube = git https://github.com/plone-ve/diazotheme.kube.git
 diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
 diazotheme.purecss = git https://github.com/plone-ve/diazotheme.purecss.git
-diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
+diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
 
