Added collective.js.foundation package #70

--- a/themes.cfg
+++ b/themes.cfg
@@ -51,6 +51,10 @@ auto-checkout =
 #    beyondskins.twentythirteen
 
 
+################# Zurb Foundation Framework Themes
+    collective.js.foundation
+
+
 ################# Diazo Framework resources for CSS Frameworks
     diazoframework.plone
     diazoframework.amazium
@@ -259,6 +263,10 @@ beyondskins.s17 = git https://github.com/plone-ve/beyondskins.s17.git
 beyondskins.sports = git https://github.com/plone-ve/beyondskins.sports.git
 beyondskins.sunflower = git https://github.com/plone-ve/beyondskins.sunflower.git
 beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentythirteen.git
+
+
+################# Zurb Foundation Framework Themes
+collective.js.foundation = git https://github.com/toutpt/collective.js.foundation.git
 
 
 ################# Diazo Framework resources for CSS Frameworks
