--- a/themes.cfg
+++ b/themes.cfg
@@ -53,6 +53,8 @@ auto-checkout =
 
 ################# Zurb Foundation Framework Themes
     collective.js.foundation
+    seantis.web
+#    collective.blogging
 
 
 ################# Diazo Framework resources for CSS Frameworks
@@ -267,6 +269,8 @@ beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentyt
 
 ################# Zurb Foundation Framework Themes
 collective.js.foundation = git https://github.com/toutpt/collective.js.foundation.git
+seantis.web = git https://github.com/plone-ve/seantis.web.git
+#collective.blogging = git https://github.com/collective/collective.blogging.git
 
 
 ################# Diazo Framework resources for CSS Frameworks
