Added the plonetheme.onegov package #70

--- a/themes.cfg
+++ b/themes.cfg
@@ -55,6 +55,7 @@ auto-checkout =
     collective.js.foundation
     seantis.web
 #    collective.blogging
+    plonetheme.onegov
 
 
 ################# Diazo Framework resources for CSS Frameworks
@@ -271,6 +272,7 @@ beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentyt
 collective.js.foundation = git https://github.com/toutpt/collective.js.foundation.git
 seantis.web = git https://github.com/plone-ve/seantis.web.git
 #collective.blogging = git https://github.com/collective/collective.blogging.git
+plonetheme.onegov = git https://github.com/plone-ve/plonetheme.onegov.git
 
 
 ################# Diazo Framework resources for CSS Frameworks
