Enabled beyondskins.html5 package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -38,7 +38,7 @@ auto-checkout =
     beyondskins.brasilia
     beyondskins.colors
     beyondskins.happy
-#    beyondskins.html5
+    beyondskins.html5
     beyondskins.lostkatana
     beyondskins.minimalist
 #    beyondskins.pb9.site
