Enabled the beyondskins.pb9.site package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -41,7 +41,7 @@ auto-checkout =
     beyondskins.html5
     beyondskins.lostkatana
     beyondskins.minimalist
-#    beyondskins.pb9.site
+    beyondskins.pb9.site
     beyondskins.phantasmagoria
 #    beyondskins.plaza
     beyondskins.responsive
