Enabled the beyondskins.plaza theme package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -43,7 +43,7 @@ auto-checkout =
     beyondskins.minimalist
     beyondskins.pb9.site
     beyondskins.phantasmagoria
-#    beyondskins.plaza
+    beyondskins.plaza
     beyondskins.responsive
 #    beyondskins.s17
     beyondskins.sports
