Enabled the beyondskins.s17 theme package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -45,7 +45,7 @@ auto-checkout =
     beyondskins.phantasmagoria
     beyondskins.plaza
     beyondskins.responsive
-#    beyondskins.s17
+    beyondskins.s17
     beyondskins.sports
     beyondskins.sunflower
 #    beyondskins.twentythirteen
