Enabled the beyondskins.twentythirteen theme package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -48,7 +48,7 @@ auto-checkout =
     beyondskins.s17
     beyondskins.sports
     beyondskins.sunflower
-#    beyondskins.twentythirteen
+    beyondskins.twentythirteen
 
 
 ################# Zurb Foundation Framework Themes
