Updated the plonetheme.trantor package Buildout configurations

--- a/themes.cfg
+++ b/themes.cfg
@@ -52,6 +52,7 @@ auto-checkout =
 
 
 ################# Zurb Foundation Framework Themes
+    plonetheme.trantor
     collective.js.foundation
     seantis.web
 #    collective.blogging
@@ -103,7 +104,6 @@ auto-checkout =
     quintagroup.theme.pythonreel
     plonetheme.aclark_twitter
     plonetheme.drupal
-    plonetheme.trantor
 
 
 ################# Custom Diazo themes
@@ -269,6 +269,7 @@ beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentyt
 
 
 ################# Zurb Foundation Framework Themes
+plonetheme.trantor = git https://github.com/plone-ve/plonetheme.trantor.git
 collective.js.foundation = git https://github.com/toutpt/collective.js.foundation.git
 seantis.web = git https://github.com/plone-ve/seantis.web.git
 #collective.blogging = git https://github.com/collective/collective.blogging.git
@@ -324,7 +325,6 @@ quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
 plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
 plonetheme.drupal = git https://github.com/sylvainb/plonetheme.drupal.git
-plonetheme.trantor = git https://github.com/tristanlt/plonetheme.trantor.git
 
 
 ################# Custom Diazo themes
