Added the beyondskins.capitulo1 theme package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -36,6 +36,7 @@ auto-checkout =
 ################# Beyondskins Diazo themes
     beyondskins.beyondskins
     beyondskins.brasilia
+    beyondskins.capitulo1
     beyondskins.colors
     beyondskins.happy
     beyondskins.html5
@@ -253,6 +254,7 @@ plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexper
 ################# Beyondskins Diazo themes
 beyondskins.beyondskins = git https://github.com/plone-ve/beyondskins.beyondskins.git
 beyondskins.brasilia = git https://github.com/plone-ve/beyondskins.brasilia.git
+beyondskins.capitulo1 = git https://github.com/plone-ve/beyondskins.capitulo1.git
 beyondskins.colors = git https://github.com/plone-ve/beyondskins.colors.git
 beyondskins.happy = git https://github.com/plone-ve/beyondskins.happy.git
 beyondskins.html5 = git https://github.com/plone-ve/beyondskins.html5.git
