Added the beyondskins.item6 theme package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -40,6 +40,7 @@ auto-checkout =
     beyondskins.colors
     beyondskins.happy
     beyondskins.html5
+    beyondskins.item6
     beyondskins.lostkatana
     beyondskins.minimalist
     beyondskins.pb9.site
@@ -258,6 +259,7 @@ beyondskins.capitulo1 = git https://github.com/plone-ve/beyondskins.capitulo1.gi
 beyondskins.colors = git https://github.com/plone-ve/beyondskins.colors.git
 beyondskins.happy = git https://github.com/plone-ve/beyondskins.happy.git
 beyondskins.html5 = git https://github.com/plone-ve/beyondskins.html5.git
+beyondskins.item6 = git https://github.com/plone-ve/beyondskins.item6.git
 beyondskins.lostkatana = git https://github.com/plone-ve/beyondskins.lostkatana.git
 beyondskins.minimalist = git https://github.com/plone-ve/beyondskins.minimalist.git
 beyondskins.pb9.site = git https://github.com/plone-ve/beyondskins.pb9.site.git
