Added the beyondskins.plonesymposium.site package #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -46,6 +46,7 @@ auto-checkout =
     beyondskins.pb9.site
     beyondskins.phantasmagoria
     beyondskins.plaza
+    beyondskins.plonesymposium.site
     beyondskins.responsive
     beyondskins.s17
     beyondskins.sports
@@ -265,6 +266,7 @@ beyondskins.minimalist = git https://github.com/plone-ve/beyondskins.minimalist.
 beyondskins.pb9.site = git https://github.com/plone-ve/beyondskins.pb9.site.git
 beyondskins.phantasmagoria = git https://github.com/plone-ve/beyondskins.phantasmagoria.git
 beyondskins.plaza = git https://github.com/plone-ve/beyondskins.plaza.git
+beyondskins.plonesymposium.site = git https://github.com/plone-ve/beyondskins.plonesymposium.site.git
 beyondskins.responsive = git https://github.com/plone-ve/beyondskins.responsive.git
 beyondskins.s17 = git https://github.com/plone-ve/beyondskins.s17.git
 beyondskins.sports = git https://github.com/plone-ve/beyondskins.sports.git
