--- a/buildout.cfg
+++ b/buildout.cfg
@@ -143,6 +143,7 @@ eggs =
     toutpt.zopeskel
     vs.zopeskel.diazo
     zest.releaser
+    zopeskel.diazochildtheme
     zopeskel.diazotheme
 
 
@@ -177,4 +178,5 @@ ZopeSkel = 2.21.2
 Cheetah = 2.2.1
 toutpt.zopeskel = 1.3.3
 vs.zopeskel.diazo = 1.0
+zopeskel.diazochildtheme = 0.1
 zopeskel.diazotheme = 1.1
