Changed URL for the diazotheme.bootswatch package

--- a/themes.cfg
+++ b/themes.cfg
@@ -308,7 +308,7 @@ diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 diazotheme.baseline = git https://github.com/plone-ve/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
-diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
+diazotheme.bootswatch = git https://github.com/plone-ve/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
 diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.git
