--- a/themes.cfg
+++ b/themes.cfg
@@ -246,7 +246,7 @@ plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
 plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
-plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.git
+plonetheme.unbound11 = git https://github.com/plone-ve/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
 plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
