--- a/themes.cfg
+++ b/themes.cfg
@@ -248,7 +248,7 @@ plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.poll
 plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/plone-ve/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
-plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
+plonetheme.transition = git https://github.com/plone-ve/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
 #plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
