Changed the url plonetheme.plumigreen repository

--- a/themes.cfg
+++ b/themes.cfg
@@ -245,7 +245,7 @@ plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
-plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
+plonetheme.plumigreen = git https://github.com/plone-ve/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/plone-ve/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
 plonetheme.transition = git https://github.com/plone-ve/plonetheme.transition.git
