Added the sauna.reload package #81

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -66,6 +66,7 @@ parts =
 eggs +=
     experimental.btree
     five.pt
+    sauna.reload
     ${buildout:auto-checkout}
 
 
@@ -97,6 +98,7 @@ environment-vars =
     PTS_LANGUAGES es
     zope_i18n_allowed_languages es
     zope_i18n_compile_mo_files false
+zope-conf-additional = %import sauna.reload
 
 
 # See https://pypi.org/project/collective.recipe.template for
