Added canaima linux project plone theme #82

--- a/themes.cfg
+++ b/themes.cfg
@@ -3,6 +3,8 @@
 auto-checkout =
 ################# Diazo themes
 #    chalkboardtheme_plone
+    canaima.aponwaotheme
+    canaimagnulinux.web.theme
     plonetheme.amherst
     plonetheme.aqueouslight
     plonetheme.armadillotec
@@ -209,6 +211,10 @@ eggs =
 #    uwosh.mobile.tools
 
 zcml =
+################# Diazo themes
+    canaima.aponwaotheme
+
+
 ################# Theming tools
     Products.ContentWellPortlets
 #    quintagroup.portletmanager.footer
@@ -223,6 +229,8 @@ zcml =
 [sources]
 ################# Generic Diazo themes
 #chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
+canaima.aponwaotheme = git https://github.com/CanaimaGNULinux/canaima.aponwaotheme.git
+canaimagnulinux.web.theme = git https://github.com/CanaimaGNULinux/canaimagnulinux.web.theme.git
 plonetheme.amherst = git https://github.com/collective/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
