Temporarily disable the uwosh.mobile.tools package #75

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -29,16 +29,18 @@ extensions =
 extends =
     http://dist.plone.org/release/4.3-latest/versions.cfg
     themes.cfg
-    versions.cfg
+#    versions.cfg
 
 
 # If you change your Plone version, you'll also need to update
 # the repository link below.
 #
 find-links =
-#    http://www.uwosh.edu/ploneprojects/software/uwosh.mobile.tools/releases/0.0.2/uwosh.mobile.tools-0.0.2.zip
     http://dist.plone.org/release/4.3-latest/
     http://dist.plone.org/thirdparty/
+############################################ uwosh.mobile.tools
+#    http://www.uwosh.edu/ploneprojects/software/uwosh.mobile.tools/releases/0.0.2/uwosh.mobile.tools-0.0.2.zip
+
 
 ############################################
 # Parts Specification
