Added improvements about buildout configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,8 @@
 [buildout]
 
+# Python Package Index Server
+index = https://pypi.org/simple/
+
 # By default, zc.buildout doesn’t unzip zip-safe eggs packages. This 
 # follows the policy followed by setuptools itself. Experience shows 
 # this policy to to be inconvenient. Zipped eggs make debugging more 
@@ -97,8 +100,8 @@ eggs =
 zcml =
     ${buildout:zcml}
 environment-vars =
-    PTS_LANGUAGES es
-    zope_i18n_allowed_languages es
+    PTS_LANGUAGES en es
+    zope_i18n_allowed_languages en es
     zope_i18n_compile_mo_files false
 zope-conf-additional = %import sauna.reload
 
