Added PloneEdu theme #8

--- a/themes.cfg
+++ b/themes.cfg
@@ -5,6 +5,7 @@ auto-checkout =
 #    chalkboardtheme_plone
     canaima.aponwaotheme
     canaimagnulinux.web.theme
+    ploneedu.theme
     plonetheme.amherst
     plonetheme.aqueouslight
     plonetheme.armadillotec
@@ -231,6 +232,7 @@ zcml =
 #chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
 canaima.aponwaotheme = git https://github.com/CanaimaGNULinux/canaima.aponwaotheme.git
 canaimagnulinux.web.theme = git https://github.com/CanaimaGNULinux/canaimagnulinux.web.theme.git
+ploneedu.theme = git https://github.com/collective/ploneedu.theme.git
 plonetheme.amherst = git https://github.com/collective/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
