Added the ftw.slider product #83

--- a/themes.cfg
+++ b/themes.cfg
@@ -126,6 +126,10 @@ auto-checkout =
     kombinat.decogrid
 
 
+################# Slider tools
+    ftw.slider
+
+
 ################# Plone True Gallery
 #    collective.js.supersized
 
@@ -364,6 +368,10 @@ kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
 
 ################# Slider Tag
 collective.easyslider = git https://github.com/collective/collective.easyslider.git
+
+
+################# Slider tools
+ftw.slider = git https://github.com/4teamwork/ftw.slider.git
 
 
 ################# JQuery.ui's themeroller tools
