Enabled the chalkboardtheme plone package

--- a/themes.cfg
+++ b/themes.cfg
@@ -2,7 +2,7 @@
 
 auto-checkout =
 ################# Diazo themes
-#    chalkboardtheme_plone
+    plonetheme.chalkboard
     canaima.aponwaotheme
     canaimagnulinux.web.theme
     ploneedu.theme
@@ -233,7 +233,7 @@ zcml =
 # https://pypi.org/project/mr.developer for details on format for this part
 [sources]
 ################# Generic Diazo themes
-#chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
+plonetheme.chalkboard = git https://github.com/plone-ve/plonetheme.chalkboard.git
 canaima.aponwaotheme = git https://github.com/CanaimaGNULinux/canaima.aponwaotheme.git
 canaimagnulinux.web.theme = git https://github.com/CanaimaGNULinux/canaimagnulinux.web.theme.git
 ploneedu.theme = git https://github.com/collective/ploneedu.theme.git
