Changed the URL plonetheme.zopeorg repository

--- a/themes.cfg
+++ b/themes.cfg
@@ -350,7 +350,7 @@ plonetheme.drupal = git https://github.com/sylvainb/plonetheme.drupal.git
 ################# Custom Diazo themes
 plonetheme.changecenter = git https://github.com/collective/plonetheme.changecenter.git
 plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
-plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
+plonetheme.zopeorg = git https://github.com/plone-ve/plonetheme.zopeorg.git
 
 
 ################# Theming tools
