Changed the plonetheme.pythonmexico URL repository

--- a/themes.cfg
+++ b/themes.cfg
@@ -257,7 +257,7 @@ plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsim
 plonetheme.leavesdew = git https://github.com/collective/plonetheme.leavesdew.git
 plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
-plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
+plonetheme.pythonmexico = git https://github.com/plone-ve/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
 plonetheme.plumigreen = git https://github.com/plone-ve/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/plone-ve/plonetheme.unbound11.git
