Fixed some collective.ptg.* name from auto-checkout section

--- a/themes.cfg
+++ b/themes.cfg
@@ -184,13 +184,13 @@ eggs =
     collective.ptg.bootstrapcarousel
     collective.ptg.carousel
     collective.ptg.contentflow
-    collective.ptg.contentlea
+    collective.ptg.contentleadimage
     collective.ptg.contactsheet
     collective.ptg.easyslider
     collective.ptg.fancybox
     collective.ptg.flickr
+    collective.ptg.galleria
     collective.ptg.galleriffic
-    collective.ptg.galleriadimage
     collective.ptg.galleryfolder
     collective.ptg.galleryimage
     collective.ptg.garagedoor
