--- a/themes.cfg
+++ b/themes.cfg
@@ -263,7 +263,7 @@ plonetheme.plumigreen = git https://github.com/plone-ve/plonetheme.plumigreen.gi
 plonetheme.unbound11 = git https://github.com/plone-ve/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
 plonetheme.transition = git https://github.com/plone-ve/plonetheme.transition.git
-plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
+plonetheme.woodexperience = git https://github.com/plone-ve/plonetheme.woodexperience.git
 #plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
 
