Changed the plonetheme.redmusic URL repository

--- a/themes.cfg
+++ b/themes.cfg
@@ -256,7 +256,7 @@ plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.gi
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
 plonetheme.leavesdew = git https://github.com/collective/plonetheme.leavesdew.git
 plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
-plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
+plonetheme.redmusic = git https://github.com/plone-ve/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/plone-ve/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
 plonetheme.plumigreen = git https://github.com/plone-ve/plonetheme.plumigreen.git
