Changed the plonetheme.motion URL repository

--- a/themes.cfg
+++ b/themes.cfg
@@ -255,7 +255,7 @@ plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.gi
 plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
 plonetheme.leavesdew = git https://github.com/collective/plonetheme.leavesdew.git
-plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
+plonetheme.motion = git https://github.com/plone-ve/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/plone-ve/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/plone-ve/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
