--- a/themes.cfg
+++ b/themes.cfg
@@ -80,7 +80,7 @@ auto-checkout =
     diazotheme.framework.cascade
 #    diazotheme.framework.gumby
     diazotheme.framework.ivory
-    diazotheme.framework.metro
+#    diazotheme.framework.metro
     diazotheme.framework.wirefy
     diazotheme.framework.yaml4
 
@@ -313,7 +313,7 @@ diazoframework.skeleton = git https://github.com/plone-ve/diazoframework.skeleto
 diazotheme.framework.cascade = git https://github.com/TH-code/diazotheme.framework.cascade.git
 #diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
 diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
-diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
+#diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
 diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
 diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
