Disable the diazotheme.framework.wirefy package for this moment

--- a/themes.cfg
+++ b/themes.cfg
@@ -81,7 +81,7 @@ auto-checkout =
 #    diazotheme.framework.gumby
 #    diazotheme.framework.ivory
 #    diazotheme.framework.metro
-    diazotheme.framework.wirefy
+#    diazotheme.framework.wirefy
     diazotheme.framework.yaml4
 
     diazotheme.amazium
@@ -314,7 +314,7 @@ diazotheme.framework.cascade = git https://github.com/TH-code/diazotheme.framewo
 #diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
 #diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
 #diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
-diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
+#diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
 diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
 
