Changed the url repository for plonetheme.drupal package

--- a/themes.cfg
+++ b/themes.cfg
@@ -344,7 +344,7 @@ quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
 plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
-plonetheme.drupal = git https://github.com/sylvainb/plonetheme.drupal.git
+plonetheme.drupal = git https://github.com/plone-ve/plonetheme.drupal.git
 
 
 ################# Custom Diazo themes
