Changed the url repository for ftw.slider package

--- a/themes.cfg
+++ b/themes.cfg
@@ -371,7 +371,7 @@ collective.easyslider = git https://github.com/collective/collective.easyslider.
 
 
 ################# Slider tools
-ftw.slider = git https://github.com/4teamwork/ftw.slider.git
+ftw.slider = git https://github.com/plone-ve/ftw.slider.git
 
 
 ################# JQuery.ui's themeroller tools
