picked version for sauna.reload package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -159,7 +159,7 @@ recipe = zc.recipe.egg
 unzip = true
 eggs = i18ndude
 
-
+# The following part definition lists the versions picked:
 [versions]
 # buildout base
 setuptools = 26.1.1
@@ -172,6 +172,7 @@ buildout.threatlevel = 1.1
 
 # development base
 i18ndude = 4.4.0
+sauna.reload = 0.5.5
 
 # Chameleon
 Chameleon = 2.13
