Added the plone.app.debugtoolbar package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -72,6 +72,7 @@ eggs +=
     experimental.btree
     five.pt
     sauna.reload
+    plone.app.debugtoolbar
     ${buildout:auto-checkout}
 
 
@@ -173,6 +174,7 @@ buildout.threatlevel = 1.1
 # development base
 i18ndude = 4.4.0
 sauna.reload = 0.5.5
+plone.app.debugtoolbar = 1.1.4
 
 # Chameleon
 Chameleon = 2.13
