Added medialog.controlpanel package as a dependecy for medialog.googlefonts

--- a/themes.cfg
+++ b/themes.cfg
@@ -121,6 +121,7 @@ auto-checkout =
 ################# Theming tools
     collective.fontawesome
     medialog.googlefonts
+    medialog.controlpanel
     Products.Doormat
     collective.megadrop
     kombinat.decogrid
@@ -164,7 +165,6 @@ eggs =
 ################# Theming tools
     collective.cover
     collective.fontawesome
-    medialog.googlefonts
     collective.behavior.localdiazo
     collective.behavior.localskin
     openmultimedia.headband
@@ -356,6 +356,7 @@ plonetheme.zopeorg = git https://github.com/plone-ve/plonetheme.zopeorg.git
 ################# Theming tools
 collective.fontawesome = git https://github.com/collective/collective.fontawesome.git
 medialog.googlefonts = git https://github.com/collective/medialog.googlefonts.git
+medialog.controlpanel = git https://github.com/plone-ve/medialog.controlpanel.git
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
 collective.megadrop = git https://github.com/collective/collective.megadrop.git
 kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
