Moved the plonetheme.chalkboard package to collective organization

--- a/themes.cfg
+++ b/themes.cfg
@@ -241,7 +241,7 @@ plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueousli
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
 plonetheme.bananaleaf = git https://github.com/collective/plonetheme.bananaleaf.git
 plonetheme.burned = git https://github.com/collective/plonetheme.burned.git
-plonetheme.chalkboard = git https://github.com/plone-ve/plonetheme.chalkboard.git
+plonetheme.chalkboard = git https://github.com/collective/plonetheme.chalkboard.git
 plonetheme.codapress = git https://github.com/collective/plonetheme.codapress.git
 plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
 plonetheme.darkened = git https://github.com/collective/plonetheme.darkened.git
