--- a/themes.cfg
+++ b/themes.cfg
@@ -310,7 +310,7 @@ diazoframework.skeleton = git https://github.com/plone-ve/diazoframework.skeleto
 
 ################# Others CSS Framework as Diazo resources
 #diazotheme.frameworks = git https://github.com/TH-code/diazotheme.frameworks.git
-diazotheme.framework.cascade = git https://github.com/TH-code/diazotheme.framework.cascade.git
+diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framework.cascade.git
 #diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
 #diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
 #diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
