Disabled the diazotheme.framework.yaml4 package

--- a/themes.cfg
+++ b/themes.cfg
@@ -82,7 +82,7 @@ auto-checkout =
 #    diazotheme.framework.ivory
 #    diazotheme.framework.metro
 #    diazotheme.framework.wirefy
-    diazotheme.framework.yaml4
+#    diazotheme.framework.yaml4
 
     diazotheme.amazium
     diazotheme.baseline
@@ -315,7 +315,7 @@ diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framew
 #diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
 #diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
 #diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
-diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
+#diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
 
 ################# Diazo theme with CSS Framework
