Disabled the uwosh.mobile.tools package for the versions file

--- a/versions.cfg
+++ b/versions.cfg
@@ -161,12 +161,13 @@ jarn.jsi18n = 1.1
 # collective.ptg.galleryfolder==0.3
 wildcard.foldercontents = 1.2.4
 
+
 ################# jQueryMobile's themeroller tools
 zettwerk.mobile = 0.2.1
 
+
 ################# Mobile Theming tools
 zettwerk.mobiletheming = 0.2
-uwosh.mobile.tools = 0.0.2
 
 # Required by:
 # medialog.mobilethemeTwo==0.7.1.2
@@ -180,9 +181,11 @@ ftw.upgrade = 1.10.0
 # ftw.upgrade==1.10.0
 tarjan = 0.1.2
 
+#uwosh.mobile.tools = 0.0.2
 # Required by:
 # uwosh.mobile.tools==0.0.2
-lxml = 2.2.8
+#lxml = 2.2.8
+
 
 ################# JQuery.ui's themeroller tools
 zettwerk.ui = 2.0
