Fixed some typos

--- a/themes.cfg
+++ b/themes.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 auto-checkout =
-################# Diazo themes
+################# Diazo Themes
     canaima.aponwaotheme
     canaimagnulinux.web.theme
     ploneedu.theme
@@ -36,7 +36,7 @@ auto-checkout =
 #    plonetheme.yoko
 
 
-################# Beyondskins Diazo themes
+################# Beyondskins Diazo Themes
     beyondskins.beyondskins
     beyondskins.brasilia
     beyondskins.capitulo1
@@ -99,7 +99,7 @@ auto-checkout =
 #    diazotheme.startup
 
 
-################# pre-processor CSS Less
+################# Pre-processor CSS Less
     collective.lesscss
     example.bootstrap
 
@@ -112,13 +112,13 @@ auto-checkout =
     plonetheme.drupal
 
 
-################# Custom Diazo themes
+################# Custom Diazo Themes
     plonetheme.changecenter
     plonetheme.unam
     plonetheme.zopeorg
 
 
-################# Theming tools
+################# Theming Tools
     collective.fontawesome
     medialog.googlefonts
     medialog.controlpanel
@@ -162,7 +162,7 @@ eggs =
     vs.bootstrap.tinymce
 
 
-################# Theming tools
+################# Theming Tools
     collective.cover
     collective.fontawesome
     collective.behavior.localdiazo
@@ -215,11 +215,11 @@ eggs =
 #    uwosh.mobile.tools
 
 zcml =
-################# Diazo themes
+################# Diazo Themes
     canaima.aponwaotheme
 
 
-################# Theming tools
+################# Theming Tools
     Products.ContentWellPortlets
 
 
@@ -265,7 +265,7 @@ plonetheme.woodexperience = git https://github.com/plone-ve/plonetheme.woodexper
 #plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
 
-################# Beyondskins Diazo themes
+################# Beyondskins Diazo Themes
 beyondskins.beyondskins = git https://github.com/plone-ve/beyondskins.beyondskins.git
 beyondskins.brasilia = git https://github.com/plone-ve/beyondskins.brasilia.git
 beyondskins.capitulo1 = git https://github.com/plone-ve/beyondskins.capitulo1.git
@@ -332,7 +332,7 @@ diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
 
-################# pre-processor CSS Less
+################# Pre-processor CSS Less
 collective.lesscss = git https://github.com/collective/collective.lesscss.git
 example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 
@@ -345,13 +345,13 @@ plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_
 plonetheme.drupal = git https://github.com/plone-ve/plonetheme.drupal.git
 
 
-################# Custom Diazo themes
+################# Custom Diazo Themes
 plonetheme.changecenter = git https://github.com/collective/plonetheme.changecenter.git
 plonetheme.unam = git https://github.com/plone-ve/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/plone-ve/plonetheme.zopeorg.git
 
 
-################# Theming tools
+################# Theming Tools
 collective.fontawesome = git https://github.com/collective/collective.fontawesome.git
 medialog.googlefonts = git https://github.com/collective/medialog.googlefonts.git
 medialog.controlpanel = git https://github.com/plone-ve/medialog.controlpanel.git
