--- a/versions.cfg
+++ b/versions.cfg
@@ -23,7 +23,8 @@ z3c.jbot = 0.7.1
 # plonetheme.trantor==1.0
 webcouturier.dropdownmenu = 2.3.1
 
-################# Custom Diazo themes
+
+################# Custom Diazo Themes
 # plonetheme.zopeorg
 odict = 1.5.1
 
@@ -52,10 +53,12 @@ node = 0.9.11
 # node==0.9.11
 plumber = 1.2
 
+
 ################# Diazo theme with CSS Framework
 vs.bootstrap.tinymce = 1.0.3
 
-################# Theming tools
+
+################# Theming Tools
 # collective.fontawesome = 1.0.5
 # medialog.googlefonts = 2.2.2
 openmultimedia.headband = 1.0b1
