Added Quintagroup Themes section settings

--- a/themes.cfg
+++ b/themes.cfg
@@ -104,12 +104,15 @@ auto-checkout =
     example.bootstrap
 
 
-################# Plone theme skins
+################# Plone Theme Skins
+    plonetheme.aclark_twitter
+    plonetheme.drupal
+
+
+################# Quintagroup Themes - Skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
     quintagroup.theme.pythonreel
-    plonetheme.aclark_twitter
-    plonetheme.drupal
 
 
 ################# Custom Diazo Themes
@@ -151,7 +154,10 @@ auto-checkout =
 
 
 eggs = 
-################# Plone theme skins
+################# Plone Theme Skins
+
+
+################# Quintagroup Themes - Skins
     quintagroup.theme.estatelite
     quintagroup.theme.lite
     quintagroup.theme.techlight
@@ -337,12 +343,15 @@ collective.lesscss = git https://github.com/collective/collective.lesscss.git
 example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 
 
-################# Plone theme skins
+################# Plone Theme Skins
+plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
+plonetheme.drupal = git https://github.com/plone-ve/plonetheme.drupal.git
+
+
+################# Quintagroup Themes - Skins
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
 quintagroup.theme.schools = git https://github.com/plone-ve/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
-plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
-plonetheme.drupal = git https://github.com/plone-ve/plonetheme.drupal.git
 
 
 ################# Custom Diazo Themes
