--- a/versions.cfg
+++ b/versions.cfg
@@ -1,13 +1,19 @@
 [versions]
+################# Diazo Themes
+plonetheme.plumigreen =
 
-################# Plone theme skins
+
+################# Plone Theme Skins
+
+
+################# Quintagroup Themes - Skins
+quintagroup.theme.sunrain =
+quintagroup.theme.schools =
+quintagroup.theme.pythonreel =
 quintagroup.theme.estatelite = 6.0.6
 quintagroup.theme.lite = 6.0.4
 quintagroup.theme.techlight = 6.0.6
 quintagroup.theme.whiteblack = 6.0.3
-
-# plonetheme.plumigreen
-# quintagroup.theme.sunrain
 
 # Required by:
 # plonetheme.plumigreen==0.1
@@ -18,7 +24,8 @@ plone.app.themingplugins = 1.0b1
 # plone.app.themingplugins==1.0b1
 z3c.jbot = 0.7.1
 
-# plonetheme.trantor
+################# Zurb Foundation Framework Themes
+plonetheme.trantor =
 # Required by:
 # plonetheme.trantor==1.0
 webcouturier.dropdownmenu = 2.3.1
@@ -65,6 +72,7 @@ openmultimedia.headband = 1.0b1
 Products.ContentWellPortlets = 4.1.0
 kombinat.decogrid = 0.3
 
+
 ################# Cover
 collective.cover = 1.0a9
 plone.tiles = 1.2
@@ -93,6 +101,7 @@ plone.app.drafts = 1.0a2
 # collective.cover==1.0a9
 plone.app.tiles = 1.0.1
 
+
 ################# Dexterity Behavior
 collective.behavior.localdiazo = 1.0b3
 collective.behavior.localskin = 0.9.2
@@ -102,6 +111,7 @@ collective.behavior.localskin = 0.9.2
 # collective.behavior.localskin==0.9.2
 collective.behavior.localregistry = 1.0b2
 
+
 ################# Slider Tag
 collective.easyslider = 1.3.7
 MarkupSafe = 0.23
@@ -110,6 +120,7 @@ collective.easytemplate = 0.8.0
 # Required by:
 # collective.easytemplate==0.8.0
 collective.templateengines = 0.3.5
+
 
 ################# Plone True Gallery
 collective.js.supersized = 0.4.3
