Fixed somes typo

--- a/themes.cfg
+++ b/themes.cfg
@@ -138,11 +138,11 @@ auto-checkout =
 #    collective.js.supersized
 
 
-################# JQuery.ui's themeroller tools
+################# jQuery.ui's ThemeRoller Theming Tools
     zettwerk.ui
 
 
-################# jQueryMobile's themeroller tools
+################# jQueryMobile's ThemeRoller Theming Tools
     zettwerk.mobile
 
 
@@ -382,11 +382,11 @@ collective.easyslider = git https://github.com/collective/collective.easyslider.
 ftw.slider = git https://github.com/plone-ve/ftw.slider.git
 
 
-################# JQuery.ui's themeroller tools
+################# jQuery.ui's ThemeRoller Theming Tools
 zettwerk.ui = git https://github.com/collective/zettwerk.ui.git
 
 
-################# jQueryMobile's themeroller tools
+################# jQueryMobile's ThemeRoller Theming Tools
 zettwerk.mobile = git https://github.com/collective/zettwerk.mobile.git
 
 
