--- a/versions.cfg
+++ b/versions.cfg
@@ -176,7 +176,7 @@ jarn.jsi18n = 1.1
 wildcard.foldercontents = 1.2.4
 
 
-################# jQueryMobile's themeroller tools
+################# jQueryMobile's ThemeRoller Theming Tools
 zettwerk.mobile = 0.2.1
 
 
@@ -201,5 +201,5 @@ tarjan = 0.1.2
 #lxml = 2.2.8
 
 
-################# JQuery.ui's themeroller tools
+################# jQuery.ui's ThemeRoller Theming Tools
 zettwerk.ui = 2.0
